--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
   <head>
-    <title>Articles App</title>
+    <title>Alpha Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,7 +13,7 @@
   </head>
 
 
-  <body>
+  <body class="d-flex flex-column">
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
     <%= yield %>
