--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,6 @@
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
   <div class="container text-center">
-    <small>Copyright &copy; Alpha Blog</small>
+    <small>Copyright &copy; <%= link_to 'Alpha Blog', about_path, class:"text-white" %> </small>
   </div>
 </footer>
