--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,10 +1,4 @@
-<h1>Edit article</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Delete', article_path(@article), data: {
-          turbo_method: :delete,
-          turbo_confirm: "Are you sure",
-
-        } %> |
-<%= link_to 'Return to article listing', articles_path %> 
+<div id="page-content">
+  <h1 class="text-center mt-5">Edit article</h1>
+ <%= render 'form' %>
+</div>
