--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
-  <%= render 'layouts/errormsg' %>
   <div class="row justify-content-center">
     <div class="col-10">
+      <%= render 'shared/errors' %>
       <%= form_with(model: @article,class:"shadow p-3 mb-5 bg-info rounded", local: true) do |f| %>
-      <div class="form-group row">
-          <%= f.label :title, class: "col-2 col-form-label mt-3 text-light"%>
-         <div class="col-10">
-          <%= f.text_field :title, class:"form-control shadow rounded", placeholder:"Title of article" %>
+        <div class="form-group row">
+            <%= f.label :title, class: "col-2 col-form-label mt-3 text-light"%>
+           <div class="col-10">
+            <%= f.text_field :title, class:"form-control shadow rounded", placeholder:"Title of article" %>
+           </div>
          </div>
-       </div>
        <div class="form-group row">
           <%= f.label :description,class: "col-2 col-form-label text-light" %>
          <div class="col-10">
