--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,6 +21,7 @@
        </div>
       <% end %>
     </div>
-    <%= link_to '[ Cancel and return to article listing ]', articles_path, class:"row justify-content-center text-info" %> 
-  </div>
+    <div class="mb-5">
+     <%= link_to '[ Cancel and return to article listing ]', articles_path, class:"row justify-content-center text-info" %></div>
+    </div>
 </div>
