--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,11 @@
 
 <%= gravatar_for @user, size: 200 %>
 
+ <div class="text-center mt-5">
+ 	
+ 	<a btn-link class="btn btn-outline-info"<%= link_to 'Edit Profile', edit_user_path(@user) %>
+ </div>
+
 <h3 class="text-center mt-5">Articles</h3>
 
 <%= render 'articles/article' %>
