--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,18 @@
 <%= gravatar_for @user, size: 200 %>
 
  <div class="text-center mt-5">
- 	
- 	<a btn-link class="btn btn-outline-info"<%= link_to 'Edit Profile', edit_user_path(@user) %>
+ 	<a btn-link class="btn btn-outline-info"<%= link_to 'Edit Profile', edit_user_path(@user) %></a>
+
  </div>
 
 <h3 class="text-center mt-5">Articles</h3>
 
+<div class="flickr_pagination">
+    <%= will_paginate @article, :container => false %>
+</div>
+
 <%= render 'articles/article' %>
+
+<div class="flickr_pagination mb-4">
+    <%= will_paginate @article, :container => false %>
+</div>
