--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,10 +9,12 @@
           </div>
           <div class="card-body">
             <div class="card-text text-start"><%= simple_format (@article.description) %></div>
-            <a btn-link class="btn btn-outline-info"<%= link_to 'Edit', edit_article_path(@article) %></a>
-            <a btn-link class="btn btn-outline-danger"<%= link_to 'Delete', article_path(@article), data: {
-          turbo_method: :delete,
-          turbo_confirm: "Are you sure" } %></a>
+            <% if logged_in? && @article.user == current_user %>
+              <a btn-link class="btn btn-outline-info"<%= link_to 'Edit', edit_article_path(@article) %></a>
+              <a btn-link class="btn btn-outline-danger"<%= link_to 'Delete', article_path(@article), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure" } %></a>
+            <% end -%>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(@article.created_at) %> ago,
