--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
           <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success" %></h5>
           <p class="card-text"><%= truncate(article.description, lenght: 100) %></p>
           <a btn-link class="btn btn-outline-success"<%= link_to 'View', article_path(article) %></a>
-          <% if logged_in? && article.user == current_user %>
+          <% if logged_in? && (article.user == current_user || current_user.admin? ) %>
             <a btn-link class="btn btn-outline-info"<%= link_to 'Edit', edit_article_path(article) %></a>
             <a btn-link class="btn btn-outline-danger"<%= link_to 'Delete', article_path(article), data: {
           turbo_method: :delete,
