--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,8 +17,15 @@
           <h5 class="card-title"><%= link_to gravatar_for(user, size: 150), user %></h5>
           <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
           <a btn-link class="btn btn-outline-success"<%= link_to 'View Profile', user %></a>
-          <% if logged_in? && user == current_user %>
-            <a btn-link class="btn btn-outline-info"<%= link_to 'Edit Profile', edit_user_path(user) %></a>
+          <% if logged_in? %>
+            <% if user == current_user %>
+             <a btn-link class="btn btn-outline-info"<%= link_to 'Edit Profile', edit_user_path(user) %></a>
+            <% end -%>
+            <% if current_user.admin? %>
+              <a btn-link class="btn btn-outline-danger"<%= link_to 'Delete user', user_path(user), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure you want to delete the user account and all associated articles?" } %></a>
+            <% end -%>
           <% end %>
         </div>
         <div class="card-footer text-muted">
