--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,11 @@
 <h3 class="text-center mt-5">Articles</h3>
 
 <div class="flickr_pagination">
-    <%= will_paginate @article, :container => false %>
+    <%= will_paginate @articles, :container => false %>
 </div>
 
 <%= render 'articles/article' %>
 
 <div class="flickr_pagination mb-4">
-    <%= will_paginate @article, :container => false %>
+    <%= will_paginate @articles, :container => false %>
 </div>
