--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,6 +16,13 @@
          </div>
        </div>
 
+       <div class="form-group row">
+          <%= f.label :category,class: "col-2 col-form-label text-light" %>
+         <div class="col-10">
+          <%= f.collection_select(:category_ids, Category.all, :id, :name, {prompt: "Make your selection frm the listing below (can be empty)"}, {multiple: true, size:3, class: "form-select shadow rounded mb-4" }) %>
+         </div>
+       </div>
+
        <div class="form-group row justify-content-center">
          <%= f.submit class:"btn btn-outline-light btn-lg col-2 mb-3" %>
        </div>
