--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,20 @@
 <h1 class="text-center mt-5">Category: <%= @category.name %></h1>
+
+ <% if logged_in? && current_user.admin? %>
+     <div class="text-center mt-5">
+     	<a btn-link class="btn btn-outline-info"<%= link_to 'Edit category name', edit_category_path(@category) %></a>
+
+     </div>
+ <% end -%>
+
+<h3 class="text-center mt-5">Articles</h3>
+
+<div class="flickr_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
+<%= render 'articles/article' %>
+
+<div class="flickr_pagination mb-4">
+    <%= will_paginate @articles, :container => false %>
+</div>
