--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -4,21 +4,9 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors',obj: @category %>
-      <%= form_with(model: @category, class: "shadow p-3 mb-5 bg-info rounded", local: true) do |f| %>
-        <div class="form-group row">
-          <%= f.label :name,"Category name", class: "col-2 col-form-label text-light mb-2" %>
-          <div class="col-10">
-            <%= f.text_field :name, class: "form-control shadow rounded", placeholder: "Enter a name" %>
-          </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-          <%= f.submit class: "btn btn-outline-light btn-lg col-2" %>
-        </div>
-      <% end %>
+     <%= render 'form' %>
     </div>
     <div class="mb-5">
-     <%= link_to '[ Cancel and return to article listing ]', articles_path, class:"row justify-content-center text-info" %></div>
+     <%= link_to '[ Cancel and return to category listing ]', categories_path, class:"row justify-content-center text-info" %></div>
     </div>
 </div>
